# PARSER

./: INTRO.md  README.md  ROADMAP.md  Structured and Marks.md
.obsidian/: workspace.json
docs/: Scope.md
parser/: Parser.md  pyproject.toml
parser/src/python_parser/: __init__.py  __main__.py  ast_parser.py
parser/tests/: test_ast_parser.py
